--- a/src/Components/Locations/LocationCard.module.css
+++ b/src/Components/Locations/LocationCard.module.css
@@ -1,11 +1,20 @@
 .btnContainer {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: space-between;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+  flex-direction: column;
 }
-  
+
 .myHeader {
+  text-align: center;
+}
+
+.noResidentsDiv {
     text-align: center;
+    background-color: rgb(255, 140, 105);
+    color: rgb(176, 255, 196);
+    border-radius: 10%;
+    height: 50px;
+    width: 100px;
 }
